force-app/main/default/objects/Package__c/fields/No_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>No_of_Packages__c</fullName>
    <label>No of Packages</label>
    <summaryForeignKey>Customer__c.Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>