force-app/main/default/objects/Package__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Package Id</label>
    <type>AutoNumber</type>
</CustomField>