force-app/main/default/objects/Package__c/fields/Start_Place__c.field-meta.xml
<CustomField>
    <fullName>Start_Place__c</fullName>
    <label>Start Place</label>
    <length>30</length>
    <type>Text</type>
</CustomField>