force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_Place__c</columns>
    <columns>State__c</columns>
    <columns>No_of_Packages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>